--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: lightgray;
+    display: inline;
 }
 
 .container{
@@ -97,6 +98,7 @@ header ul a{
 }
 
 .blackhole-box{
+    z-index: -1;
     position: absolute;
     top: 0;
     width: 100%;
@@ -182,12 +184,12 @@ header ul a{
 
 .hero-vid-box{
     position: absolute;
-    right: 3%;
+    right: 0%;
 }
 
 .hero-vid-box video{
     height: 900px;
-
+    mix-blend-mode: lighten;
 }
 
 .scroll-down{
@@ -249,7 +251,7 @@ header ul a{
     font-weight: 700;
 }
 
-.info-card{
+.info-cards{
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 20px;
@@ -309,7 +311,7 @@ header ul a{
 
 .card button{
     color: white;
-    padding: 5px 15px;
+    padding: 10px 15px;
     border-radius: 10px;
     border: 1px solid #727fdeb4;
     background-color: #2200493d;
@@ -355,8 +357,476 @@ header ul a{
     bottom: 35%;
 }
 
+.my-project{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    align-items: center;
+    position: relative;
+    width: 80%;
+    height: 100vh;
+    margin-top: 200px;
+    margin-bottom: 700px;
+}
+
+.project-card{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+}
+
+.project-vidbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    position: relative;
+    cursor: pointer;
+    min-width: 400px;
+    transition: 0.5s;
+    mix-blend-mode: exclusion;
+}
+
+.project-vidbox video{
+    object-fit: cover;
+    width: 100%;
+    box-shadow: 0 0 10px lightgray;
+    transition: 0.5s;
+}
+
+.project-vidbox video:hover{
+    box-shadow: 0 0 20px lightgray;
+}
+
+.project-info{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    width: 50%;
+    padding-left: 10%;
+}
+
+.project-info h1{
+    width: 90%;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: nowrap;
+    margin-bottom: 10px;
+    margin-top: 0;
+    max-width: 450px;
+}
+
+.project-info p{
+    width: 90%;
+    max-width: 400px;
+    min-width: 400px;
+    margin-bottom: 50px;
+    margin-top: 0;
+}
+
+.project-info button{
+    color: white;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.project-info button:hover{
+    box-shadow: 0 0 15px #727fde86;
+    opacity: 0.7;
+}
+
+.hover-sign{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100px;
+}
+
+.hover-sign::before,
+.hover-sign::after{
+    content: '👆';
+    text-align: center;
+    position: absolute;
+    font-size: 50px;
+    top: 20%;
+    left: 40%;
+    border-radius: 50%;
+    animation: hoverAnimation 3s ease-in-out infinite;
+}
+
+@keyframes hoverAnimation{
+    0%{
+        box-shadow: 0 0 5px lightgray;
+        transform: translate(100%, 50%) rotate(30deg);
+    }
+    100%{
+        box-shadow: 0 0 15px lightgray;
+        transform: translate(80%, 50%) rotate(0deg);
+    }
+}
+
+.hover-sign.active{
+    display: none;
+}
+
+.skills-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+}
+
+.skills-box{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.skills-image{
+    width: 70%;
+    mix-blend-mode: lighten;
+    opacity: 0.7;
+}
+
+.designer{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    left: 5%;
+    max-width: 300px;
+}
+
+.coder{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    right: 5%;
+    max-width: 300px;
+}
 
 
+.skills-box h1{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.skills-box p{
+    line-height:23px;
+}
+
+.slider{
+    position: absolute;
+    bottom: 5%;
+    right: 20%;
+    width: 60%;
+    height: var(--heigth);
+    overflow: hidden;
+    mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+    mix-blend-mode: difference;
+    opacity: 0.8;
+}
+
+
+
+.list{
+    display: flex;
+    width: 100%;
+    min-width: calc(var(--width) * var(--quantity));
+    position: relative;
+}
+
+.slider .list .item{
+    width: var(--width);
+    height: var(--heigth);
+    position: relative;
+    top: 60px;
+    left: 100%;
+    animation: autoRun 10s linear infinite;
+    transition: filter 0.5s;
+    animation-delay: calc((10s / var(--quantity))* (var(--position) - 1) -10s)!important;
+}
+
+.slider .list .item img{
+    width: 100%;
+}
+
+@keyframes autoRun{
+    from{
+        left: 100%;
+    }to{
+        left: calc(var(--width) * -1);
+    }
+}
+
+.slider:hover .item{
+    animation-play-state: paused!important;
+    filter: grayscale(1);
+}
+
+.slider .item:hover{
+    filter: grayscale(0);
+}
+
+.contact-section{
+    width: 80%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    align-items: center;
+    position: relative;
+}
+
+.contact-section h1{
+    position: absolute;
+    top: 10%;
+    left: 40%;
+}
+
+.social-box{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.social-box a{
+    color: lightgray;
+    text-decoration: none;
+    font-size: 20px;
+    text-wrap: nowrap;
+}
+
+.social-box i{
+    color: #727fde;
+    font-size: 30px;
+    margin-right: 10px;
+}
+ 
+
+.social-icons a i{
+    color: white;
+    margin-top: 40px;
+}
+
+.contact-box p{
+    max-width: 400px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+
+.contact-box input{
+    padding: 7.5px 30px;
+    background-color: lightgray;
+    width: 80%;
+    height: 25px;
+    border: none;
+    outline: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.contact-box button{
+    margin-top: 30px;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.contact-box button:hover{
+    box-shadow: 0 0 15px #727fde86;
+    opacity: 0.7;
+}
+
+footer{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    background-color: rgba(255, 255, 255, 0.128);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.356);
+    z-index: 999;
+}
+
+footer h1{
+    font-size: 30px;
+}
+
+.menu-icon{
+    font-size: 35px;
+    cursor: pointer;
+    display: none;
+}
+
+.sidebar{
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 70%;
+    width: 0%;
+    background-color: #000000b8;
+    backdrop-filter: blur(10px);
+    z-index: 999;
+    box-shadow: 0 0 20px rgba(211, 211, 211, 0.411);
+    border-bottom-left-radius: 100%;
+    opacity: 0;
+}
+
+.close-icon{
+    font-size: 50px;
+    color: lightgray;
+    padding-left: 10px;
+    cursor: pointer;
+}
+
+.sidebar ul{
+    padding-left: 20px;
+}
+
+.sidebar ul li{
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+.sidebar ul li a{
+    text-decoration: none;
+    color: lightgray;
+    font-size: 30px;
+    font-weight: 700;
+    text-shadow: 0 0 15px rgba(128, 128, 128, 0.256);
+}
+
+.sidebar ul li a{
+    font-size: 35px;
+    padding: 5px 5px;
+    cursor: pointer;
+}
+
+.sidebar .social-icons{
+    font-size: 35px;
+    padding: 5px 5px;
+    cursor: pointer;
+}
+
+.sidebar .open-sidebar{
+    animation: openSidebarAnimation 1.5s forwards;
+}
+
+@keyframes openSidebarAnimation{
+   to{
+    width: 80%;
+    opacity: 1;
+    bottom: 0;
+    border-radius: 0;
+   }
+}
+
+.sidebar .close-sidebar{
+    animation: closeSidebarAnimation 1.5s forwards;
+}
+
+@keyframes closeSidebarAnimation{
+   from{
+    width: 80%;
+    opacity: 1;
+    bottom: 0;
+    border-radius: 0;
+   }
+   to{
+    width: 0%;
+    opacity: 0;
+    bottom: 70%;
+    border-bottom-left-radius: 50%;
+   }
+}
+
+.autoblur{
+    animation: autoBlurAnimation linear both;
+    animation-timeline: view();
+}
+
+@keyframes autoBlurAnimation{
+   0%{
+    filter: blur(40px);
+    opacity: 0;
+   }
+   35%, 65%{
+    filter: blur(0);
+    opacity: 1;
+   }
+   100%{
+    filter: blur(40px);
+    opacity: 0;
+   }
+}
+
+.autodisplay{
+    animation: autoDisplayAnimation both;
+    animation-timeline: view();
+}
+
+@keyframes autoDisplayAnimation{
+    from{
+        filter: blur(10px);
+        transform: translateY(-200px) scale(0);
+        opacity: 0.2;
+    }
+    50%{
+      opacity: 1;
+      filter: blur(0);
+      transform: translateY(0) scale(1);
+    }
+}
+
+.fadeInRigth{
+    animation: fadeInAnimation both;
+    animation-timeline: view();
+}
+
+@keyframes fadeInAnimation{
+    0%{
+        filter: blur(20px);
+        transform: translateX(-500px) scale(0.2);
+        opacity: 0;
+    }
+    35%, 65%{
+      opacity: 1;
+      filter: blur(0);
+      transform: translateX(0) scale(1);
+    }
+    100%{
+        filter: blur(20px);
+    }
+}
 
 @media(max-aspect-ratio: 16/9){
     .back-vid{
@@ -370,4 +840,204 @@ header ul a{
         width: 100%;
         height: auto;
     }
+}
+
+@media screen and (max-width: 1000px){
+    .blackhole-box video{
+        margin-top: -20%;
+    }
+
+    .hero-info h1{
+        font-size: 40px;
+        max-width: 400px;
+        line-height: 40px;
+    }
+
+    .hero-info p{
+        max-width: 300px;
+    }
+
+    .hero-vid-box{
+        right: 0;
+    }
+
+    .hero-vid-box video{
+        height: 500px;
+    }
+
+    .section-tittle{
+        font-size: 30px;
+    }
+
+    .info-cards{
+        grid-template-columns: auto;
+    }
+
+    .card:nth-child(3){
+        grid-column: span 2;
+        height: 70vh;
+    }
+
+    .info-cards .card h1{
+        font-size: 20px;
+    }
+
+    .card:nth-child(3) h1{
+        bottom: 25%;
+    }
+
+    .card video{
+        height: 65%;
+        margin-top: 5%;
+    }
+
+    .my-project{
+        margin-bottom: 300px;
+    }
+
+    .project-vidbox video{
+        width: 250px;
+        margin-left: -100px;
+    }
+
+    .project-info{
+        padding-left: 0;
+        margin-left: -100px;
+    }
+
+    .project-info h1{
+        font-size: 20px;
+        max-width: 200px;
+        text-wrap: wrap;
+    }
+
+    .project-info p{
+        font-size: 10px;
+        text-wrap: wrap;
+        max-width: 200px;
+        min-width: 0;
+    }
+
+    footer h1{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 700px){
+    header{
+        position: fixed;
+        height: 50px;
+    }
+
+    header ul{
+        display: none;
+    }
+
+    header .box-icons{
+        display: none;
+    }
+
+    header h1{
+        font-size: 25px;
+    }
+
+    .blackhole-box video{
+        margin-top: -16%;
+    }
+
+    .hero{
+        flex-direction: column;
+    }
+
+    .autoblur{
+        animation: none;
+    }
+
+    .hero-info{
+        bottom: 5%;
+    }
+
+    .scroll-down{
+        bottom: 5%;
+    }
+
+    .hero-info h1{
+        line-height: 50px;
+    }
+
+    .hero-vid-box video{
+        height: 200px;
+        top: 5%;
+        right: 5%;
+    }
+
+    .card video{
+        width: 100%;
+    }
+
+    .my-project{
+        margin-bottom: 600px;
+    }
+
+    .project-card{
+        flex-direction: column;
+        margin-left: 25%;
+        gap: 30px;
+    }
+
+    .project-info{
+        width: 85%;
+    }
+
+    .project-info p{
+        max-width: 300px;
+    }
+
+
+    .designer{
+        top: 15%;
+        left: 18%;
+    }
+
+    .coder{
+        top: 50%;
+        left: 18%;
+    }
+
+    .skills-box h1{
+        margin-bottom: 0;
+        margin-top: 70px;
+    }
+
+    .slider{
+        bottom: 0;
+    }
+
+    .slider img{
+        width: 60%;
+    }
+
+    .contact-section{
+        flex-direction: column;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+
+    .contact-section .section-tittle{
+        top: -40px;
+        left: 25%;
+    }
+
+    footer h1{
+        font-size: 17px;
+    }
+
+    .project-vidbox{
+        min-width: 200px;
+    }
+
+    .menu-icon{
+        display: inline;
+    }
+
 }
